Ajuste: - Inserir novas linhas de produtos. Atualmente temos Fitness, Lingerie, Escolar e Praia. Eles querem acrescentar mais duas, as linhas Casual e Jacquard.

--- a/app/Resources/views/site/topo.html.twig
+++ b/app/Resources/views/site/topo.html.twig
@@ -36,12 +36,12 @@
                             </a>
                         </li>
                         <li style="position:relative;top: -105px;left: 124px;">
-                            <a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'colecao'}) }}">
+                            <a href="{{ path('product_category_sub_list', {category_slug: 'casual', subcategory_slug: 'colecao'}) }}">
                                 Casual
                             </a>
                         </li>
                         <li style="position:relative;top: -105px;left: 124px;">
-                            <a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'colecao'}) }}">
+                            <a href="{{ path('product_category_sub_list', {category_slug: 'jacquard', subcategory_slug: 'colecao'}) }}">
                                 Jacquard
                             </a>
                         </li>
