--- a/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
@@ -82,8 +82,8 @@
                                 <li class="node-2"><a href="{{ path('product_category_sub_list', {category_slug: 'lingerie', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="2"><span class="icon-lingerie"></span>Lingerie</a></li>
                                 <li class="node-3"><a href="{{ path('product_category_sub_list', {category_slug: 'escolar', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="3"><span class="icon-escolar"></span>Escolar</a></li>
                                 <li class="node-4"><a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="4"><span class="icon-praia"></span>Praia</a></li>
-                                <li class="node-5" style="left: 456px;  top: 100px;"><a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="5"><span class="icon2-jacquard"></span>Jacquard</a></li>
-                                <li class="node-6" style="left: 580px;  top: -24px;"><a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="6"><span class="icon2-casual"></span>Casual</a></li>
+                                <li class="node-5" style="left: 456px;  top: 100px;"><a href="{{ path('product_category_sub_list', {category_slug: 'jacquard', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="5"><span class="icon2-jacquard"></span>Jacquard</a></li>
+                                <li class="node-6" style="left: 580px;  top: -24px;"><a href="{{ path('product_category_sub_list', {category_slug: 'casual', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="6"><span class="icon2-casual"></span>Casual</a></li>
                             </ul>
                             <span class="fake-nav node-1 troca-malha" data-bg="1" data-node="1" data-url="{{ path('product_category_sub_list', {category_slug: 'fitness', subcategory_slug: 'colecao'}) }}"></span>
                             <span class="fake-nav node-2 troca-malha" data-bg="2" data-node="2" data-url="{{ path('product_category_sub_list', {category_slug: 'lingerie', subcategory_slug: 'colecao'}) }}"></span>
@@ -96,6 +96,8 @@
                                 <li class="node-2"><a href="{{ path('product_category_sub_list', {category_slug: 'lingerie', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="1"><span class="icon-lingerie"></span>Lingerie <br><strong>Conheça a linha</strong></a></li>
                                 <li class="node-3"><a href="{{ path('product_category_sub_list', {category_slug: 'escolar', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="1"><span class="icon-escolar"></span>Escolar <br><strong>Conheça a linha</strong></a></li>
                                 <li class="node-4"><a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="1"><span class="icon-praia"></span>Praia <br><strong>Conheça a linha</strong></a></li>
+                                <li class="node-5"><a href="{{ path('product_category_sub_list', {category_slug: 'jacquard', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="1"><span class="icon2-jacquard"></span>Jacquard <br><strong>Conheça a linha</strong></a></li>
+                                <li class="node-6"><a href="{{ path('product_category_sub_list', {category_slug: 'casual', subcategory_slug: 'colecao'}) }}" class="troca-malha" data-bg="1"><span class="icon2-casual"></span>Casual <br><strong>Conheça a linha</strong></a></li>
                             </ul>
                         </nav>
                     </article>
