--- a/app/Resources/views/site/topo.html.twig
+++ b/app/Resources/views/site/topo.html.twig
@@ -30,17 +30,17 @@
                                 Escolar
                             </a>
                         </li>
-                        <li style="position:relative;top: -124px;left: -370px;">
+                        <li class="praia_box">
                             <a href="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'colecao'}) }}">
                                 Praia
                             </a>
                         </li>
-                        <li style="position:relative;top: -105px;left: 124px;">
+                        <li class="casual_box">
                             <a href="{{ path('product_category_sub_list', {category_slug: 'casual', subcategory_slug: 'colecao'}) }}">
                                 Casual
                             </a>
                         </li>
-                        <li style="position:relative;top: -105px;left: 124px;">
+                        <li class="jacquard_box">
                             <a href="{{ path('product_category_sub_list', {category_slug: 'jacquard', subcategory_slug: 'colecao'}) }}">
                                 Jacquard
                             </a>
