--- a/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/HomeBundle/Resources/views/Default/index.html.twig
@@ -89,6 +89,8 @@
                             <span class="fake-nav node-2 troca-malha" data-bg="2" data-node="2" data-url="{{ path('product_category_sub_list', {category_slug: 'lingerie', subcategory_slug: 'colecao'}) }}"></span>
                             <span class="fake-nav node-3 troca-malha" data-bg="3" data-node="3" data-url="{{ path('product_category_sub_list', {category_slug: 'escolar', subcategory_slug: 'colecao'}) }}"></span>
                             <span class="fake-nav node-4 troca-malha" data-bg="4" data-node="4" data-url="{{ path('product_category_sub_list', {category_slug: 'praia', subcategory_slug: 'colecao'}) }}"></span>
+                            <span class="fake-nav node-5 troca-malha" style="left: 494px;  top: 144px;" data-bg="5" data-node="5" data-url="{{ path('product_category_sub_list', {category_slug: 'jacquard', subcategory_slug: 'colecao'}) }}"></span>
+                            <span class="fake-nav node-6 troca-malha" style="left: 617px;  top: 16px;" data-bg="6" data-node="6" data-url="{{ path('product_category_sub_list', {category_slug: 'casual', subcategory_slug: 'colecao'}) }}"></span>
                         </nav>
                         <nav class="only-mobile nav-malhas">
                             <ul class="slide-mobile">
