--- a/src/SITE/ProductCategoryBundle/Resources/views/Product/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Product/index.html.twig
@@ -53,7 +53,46 @@
                             <span class="bloco-cor" style="background: #{{ Cor.hexadecimal }};">{{ Cor.code }}</span>
                             {% endif %}
                         {% endfor %}
-
+                        <div class="page_slider">
+                            <div class="arrow_left color_slide_left"></div>
+                            <div class="arrow_right color_slide_right"></div>
+                            <div class="color_slide">
+                              <div class="swiper-wrapper">
+                                  <div class="swiper-slide">
+                                    <div class="inner"></div>
+                                    <p>COLOR</p>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="inner"></div>
+                                    <p>COLOR</p>
+                                  </div>
+                                  <div class="swiper-slide"> 
+                                    <div class="inner"></div>
+                                    <p>COLOR</p>
+                                  </div>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="page_slider">
+                            <div class="arrow_left color_slide2_left"></div>
+                            <div class="arrow_right color_slide2_right"></div>
+                            <div class="color_slide2">
+                              <div class="swiper-wrapper">
+                                  <div class="swiper-slide">
+                                    <div class="inner"></div>
+                                    <p>COLOR</p>
+                                  </div>
+                                  <div class="swiper-slide">
+                                    <div class="inner"></div>
+                                    <p>COLOR</p>
+                                  </div>
+                                  <div class="swiper-slide"> 
+                                    <div class="inner"></div>
+                                    <p>COLOR</p>
+                                  </div>
+                              </div>
+                            </div>
+                        </div>
                     </div>
                     <aside>
                         <strong class="tit-medio">Código: {{ Product.code }}</strong>
