--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -19,6 +19,7 @@
                 </div>
             </li>
             <li><a href="{{ path('cms_representantes') }}" class="glyphicons group"><i></i><span>Representantes</span></a></li>
+            <li><a href="{{ path('cms_regiao') }}" class="glyphicons group"><i></i><span>Região</span></a></li>
             <li><a href="{{ path('cms_paginas') }}" class="glyphicons bookp"><i></i><span>Páginas</span></a></li>
             <li><a href="{{ path('cms_banner') }}" class="glyphicons bookp"><i></i><span>Banners</span></a></li>
             <li><a href="{{ path('cms_user') }}" class="glyphicons user"><i></i><span>Usuários</span></a></li>
