--- a/src/CMS/ConfiguracoesBundle/Resources/views/Regiao/edit.html.twig
+++ b/src/CMS/ConfiguracoesBundle/Resources/views/Regiao/edit.html.twig
@@ -7,27 +7,22 @@
 {% block content %}
     <h1>
         Editar Regiao
-                    <a class="btn btn-primary" href="{{ path('cms_regiao_new') }}">
-                Adicionar novo
-            </a>
-            </h1>
+        <a class="btn btn-primary" href="{{ path('cms_regiao_new') }}"> Adicionar novo </a>
+    </h1>
 
     <div class="widget widget-heading-simple widget-body-white">
         <div class="widget-body">
             <div class="innerLR">
+                <div id="cms_regiao_cidades_url" data-entity="{{ entity.id }}" data-url="{{ path('cms_regiao_get_cidades') }}"></div>
                 <div class="form-horizontal">
                     {{ form(edit_form) }}
-
-                                            {{ form(delete_form) }}
-                    
+                    {{ form(delete_form) }}
                     <div style="clear: both;"></div>
                  </div>
             </div>
         </div>
     </div>
-
-        <a class="btn btn-default go-back" href="{{ path('cms_regiao') }}">
+    <a class="btn btn-default go-back" href="{{ path('cms_regiao') }}">
     Voltar
 </a>
-
 {% endblock %}
