--- a/src/CMS/ConfiguracoesBundle/Resources/views/Regiao/index.html.twig
+++ b/src/CMS/ConfiguracoesBundle/Resources/views/Regiao/index.html.twig
@@ -29,6 +29,7 @@
                             </th>
                             <th>Id</th>
                             <th>Nome</th>
+                            <th>Estado</th>
                             <th>Ações</th>
                         </tr>
                     </thead>
@@ -46,6 +47,7 @@
 
                             <td><a href="{{ path('cms_regiao_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                             <td>{{ entity.nome }}</td>
+                            <td>{{ entity.estado.nome }}</td>
                             <td>    <a href="{{ path('cms_regiao_edit', { 'id': entity.id }) }}" class="btn btn-stroke btn-circle btn-primary edit" data-toggle="tooltip" data-original-title="Editar" data-placement="top" ><i class="fa fa-pencil-square-o"></i></a>
     <a href="{{ path('cms_regiao_delete', { 'id': entity.id }) }}" class="btn btn-stroke btn-circle btn-danger delete"  data-toggle="tooltip" data-original-title="Excluir" data-placement="top" ><i class="fa fa-trash-o"></i></a>
                             </td>
