--- a/src/CMS/ConfiguracoesBundle/Resources/views/Regiao/new.html.twig
+++ b/src/CMS/ConfiguracoesBundle/Resources/views/Regiao/new.html.twig
@@ -10,9 +10,9 @@
     <div class="widget widget-heading-simple widget-body-white">
         <div class="widget-body">
             <div class="innerLR">
+                <div id="cms_regiao_cidades_url" data-url="{{ path('cms_regiao_get_cidades') }}"></div>
                 <div class="form-horizontal">
                     {{ form(form) }}
-
                     <div style="clear: both;"></div>
                 </div>
             </div>
@@ -22,6 +22,12 @@
         <a class="btn btn-default go-back" href="{{ path('cms_regiao') }}">
     Voltar
 </a>
+
+<script>
+    $(document).ready(function() { 
+        cms_configuracoesbundle_regiao_atualiza_cidades(null);
+    });
+</script>
 
 {% endblock %}
 
