--- a/src/SITE/ProductCategoryBundle/Resources/views/Product/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Product/index.html.twig
@@ -69,9 +69,9 @@
                         {% endif %}
                         {% if estampados|length > 0 %}
                           <strong class="tit-medio">Estampas Disponíveis</strong>
-                          <div class="page_slider">
-                              <div class="arrow_left color_slide_left"></div>
-                              <div class="arrow_right color_slide_right"></div>
+                          <div class="page_slider2">
+                              <div class="arrow_left color_slide2_left"></div>
+                              <div class="arrow_right color_slide2_right"></div>
                               <div class="color_slide">
                                 <div class="swiper-wrapper">
                                   {% for cor in estampados %}
