--- a/web/site/css/style_1024.css
+++ b/web/site/css/style_1024.css
@@ -18,6 +18,10 @@
 .filtros-links a {
 	width: 250px;
 }
+	.desc-prod aside {
+		position:relative !important;
+		right:-30px !important;
+	}
 .filtro .selectbox {
 	width: 140px;
 }
