--- a/src/SITE/ProductCategoryBundle/Resources/views/Product/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Product/index.html.twig
@@ -44,7 +44,7 @@
                         </p>-->
                         <div class="estampa-zoom"><span class="fechar-foto"></span></div>
                         {% if lisos|length > 0 %}
-                          <strong class="tit-medio">Cores Disponíveis</strong>
+                          <strong class="tit-medio">Estampas Ácidas</strong>
                           <div class="page_slider">
                               <div class="arrow_left color_slide_left"></div>
                               <div class="arrow_right color_slide_right"></div>
@@ -68,7 +68,7 @@
                           </div>
                         {% endif %}
                         {% if estampados|length > 0 %}
-                          <strong class="tit-medio">Estampas Disponíveis</strong>
+                          <strong class="tit-medio">Estampas Digitais</strong>
                           <div class="page_slider">
                               <div class="arrow_left color_slide2_left"></div>
                               <div class="arrow_right color_slide2_right"></div>
