--- a/src/SITE/RepresentantesBundle/Resources/views/Default/index.html.twig
+++ b/src/SITE/RepresentantesBundle/Resources/views/Default/index.html.twig
@@ -17,7 +17,7 @@
                 <h2>Representantes</h2>
             </header>
             <div class="white_column">
-                <div class="wc_title">Selecione um estado</div>
+                <div class="wc_title">Selecione uma Região</div>
                 <div class="scrolling states">
                     {% for estado in estados %}
                         <div class="item" data-uf="{{ estado.sigla }}">{{ estado.nome }}</div>
