--- a/src/SITE/ProductCategoryBundle/Resources/views/Product/index.html.twig
+++ b/src/SITE/ProductCategoryBundle/Resources/views/Product/index.html.twig
@@ -44,6 +44,18 @@
                         </p>
                         {% endif %}
                         <div class="estampa-zoom"><span class="fechar-foto"></span></div>
+                        <strong class="tit-medio">{% if Product.ProductColor[0].image %}Estampas{% else %}Cores{% endif %} disponíveis</strong>
+                        {% for Cor in Product.ProductColor %}
+                            {% if Cor.image %}
+                                <a href="#" class="bloco-cor bloco-estampas" data-bg="{{ asset(Cor.image) }}" style="background: url('{{ asset(Cor.image) }}'); background-size: cover">{{ Cor.code }}</a>
+                            {% elseif Cor.Pantone %}
+                                <span class="bloco-cor" style="background: #{{ Cor.Pantone.hex }};">{{ Cor.code }}</span>
+                            {% else %}
+                                <span class="bloco-cor" style="background: #{{ Cor.hexadecimal }};">{{ Cor.code }}</span>
+                            {% endif %}
+                        {% endfor %}
+                        {#
+                        <div class="estampa-zoom"><span class="fechar-foto"></span></div>
                         {% if lisos|length > 0 %}
                           <strong class="tit-medio">Estampas Ácidas</strong>
                           <div class="page_slider">
@@ -92,6 +104,7 @@
                               </div>
                           </div>
                         {% endif %}
+                    #}
 
                         
                     </div>
